--- a/app/views/pricings/index.html.erb
+++ b/app/views/pricings/index.html.erb
@@ -47,7 +47,7 @@
   </div>
 </section>
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener('turbo:load', function() {
     const billingSwitch = document.getElementById("billingSwitch");
     const mensuelCards = document.getElementById("mensuel-cards");
     const annuelCards = document.getElementById("annuel-cards");
