--- a/app/views/posts/_banner_blogs.html.erb
+++ b/app/views/posts/_banner_blogs.html.erb
@@ -4,7 +4,7 @@
       <h2>BLOG<br><span>NOS ANIMAUX DE COMPAGNIE</span></h2>
     </div>
     <div class="banner-image">
-      <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//vecteezy_dog-and-cat-together-in-a-playful-moment_53477902.png", alt: "Pug with food bowl" %>
+      <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//blog_banner_new.webp", alt: "blogs pour les animaux" %>
     </div>
   </div>
 </div>
