--- a/app/assets/stylesheets/components/_banner_blogs.scss
+++ b/app/assets/stylesheets/components/_banner_blogs.scss
@@ -12,7 +12,7 @@
     margin: 0 auto;
     position: relative;
     display: flex;
-    padding: 0 40px;
+    padding: 0 0 0 40px;
   }
 
   .banner-text {
