--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,7 @@
 .navbar-lewagon {
   height: 76px; // Explicitly set height
   justify-content: space-between;
-  background-color: #FFF5F1;
+  background-color: $light-pink;
   position: fixed;
   top: 0;
   left: 0;
