--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,5 +10,5 @@ $gray: #0E0000;
 $light-gray: #F4F4F4;
 $pink : #EFA690;
 $white: #fdfcfa;
-$light-pink: #f9e0d9;
+$light-pink: #F9F4EE;
 $red-pink: #FFCCCC ;
