--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -45,12 +45,11 @@
 
   width: 100%;
   min-height: calc(100vh - 76px);
-  background-color: #FFF5F1;
+  background-color: $light-pink;
   box-sizing: border-box;
   overflow: visible;
   display: flex;
   align-items: center;
-  padding: 2rem 0;
   z-index: 0;
 
   @media (max-width: 768px) {
@@ -211,33 +210,7 @@
     max-width: 100%;
   }
 
-  &::before {
-    content: '';
-    position: absolute;
-    top: 60%;
-    right: -10%;
-    width: 500px;
-    height: 500px;
-    background-color: #FFE4D6;
-    border-radius: 50%;
-    transform: translateY(-50%);
-    transition: all 0.3s ease;
 
-    @media (max-width: 992px) {
-      width: 300px;
-      height: 300px;
-      top: auto;
-      bottom: -5%;
-      right: -10%;
-    }
-
-    @media (max-width: 768px) {
-      width: 200px;
-      height: 200px;
-      bottom: 0;
-      right: -5%;
-    }
-  }
 }
 
 .search-zone {
