--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -3,23 +3,36 @@
     <div class="hero-section">
       <div class="hero-content">
         <h1 class="hero-title">
-          <span class="text-warning">ADOPTER</span> AVEC AMOUR
-          <span class="text-warning">ACCOMPAGNER</span> AVEC SOIN<br>
-        </h1>
-
+          Les pros animaux à portée de clic        </h1>
         <p class="hero-subtitle">
-          Trouvez les meilleurs professionnels du bien-être animal en un seul endroit. Boop vous connecte aux experts et vous aide aussi à adopter votre futur compagnon.
-        </p>
-
+          Trouvez et prenez rendez-vous en ligne instantanément avec les meilleurs professionnels animaliers.        </p>
         <div class="cta-buttons">
-          <a href="<%=professionals_path%>" class="btn btn-primary" aria-label="Prendre un rendez-vous">Prendre un rendez-vous</a>
-          <a href="<%=pricings_path%>" class="btn btn-outline-primary text-black" aria-label="Proposer un service">Proposer un service</a>
+          <a href="<%=professionals_path%>" class="btn btn-outline-primary text-black" aria-label="Prendre un rendez-vous">Je suis Propriétaire</a>
+          <a href="<%=pricings_path%>" class="btn btn-primary text-white" aria-label="Proposer un service">Je suis Pro</a>
         </div>
       </div>
-
       <div class="hero-image">
-        <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//banner.webp", alt: "Chien"%>
+        <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//ChatGPT_Image_4_juil._2025__21_41_52-removebg-preview.png", alt: "Vétérinaire examinant un chien dans sa clinique"%>
       </div>
+    </div>
+    <div class="search-section">
+      <%= simple_form_for :search, url: professionals_path, method: :get do |f| %>
+      <div class="search-form-control form-group mb-3">
+        <div class="search-inputs-container w-form">
+          <%= text_field_tag :query,
+              params[:query],
+              class: "form-control search-bar bg-white ps-5",
+              placeholder: "Rechercher un service..."
+          %>
+          <%= text_field_tag :query_address,
+              params[:query_address],
+              class: "form-control search-bar bg-white ps-5",
+              placeholder: "Ville..."
+          %>
+          <%= submit_tag "Rechercher", class: "btn_custom search-bar ms-4" %>
+        </div>
+      </div>
+    <% end %>
     </div>
   </div>
 </div>
