--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,9 @@
 <%= render "banner_blogs"%>
 
+<div>
+  <h3>Nos articles</h3>
+</div>
+
 <div class="px-4 row justify-content-center align-items-center" style="overflow-x: hidden;  white-space: nowrap;">
   <% if @posts.empty?%>
     <div class="d-flex flex-column justify-content-center align-items-center">
