--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,13 +1,13 @@
-<footer class="text-center text-lg-start" style="sticky-bottom: 0; margin-top: 20px">
+<footer class="text-center text-lg-start" style="position: sticky; bottom: 0; padding-top: 20px; background: #F9F4EE;">
   <div class="container p-2">
     <div class="row d-flex justify-content-between">
       <div class="col-lg-8 col-md-7 col-sm-7 text-start">
-        <%= image_tag  "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//Boop%20-%20LOGO%20FINAL%20RVB.png", style:"width: 20%;" %>
+        <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//Boop%20-%20LOGO%20FINAL%20RVB.png", style: "width: 20%;" %>
       </div>
       <div class="col-lg-4 col-sm-7 d-flex flex-row">
         <div>
+          <h5 class="text-uppercase">Liens utiles</h5>
           <ul class="list-unstyled mb-0 text-start">
-           <h5 class="text-uppercase">Liens utiles</h5>
             <li>
               <%= link_to 'Accueil', root_path, class: 'text-dark' %>
             </li>
@@ -22,48 +22,38 @@
             </li>
           </ul>
         </div>
-
-        <div class=" ms-4">
-
-              <h5 class="text-uppercase">Suivez-nous</h5>
-                      <ul class="list-inline footer-links">
-                          <li class="list-inline-item">
-                              <a href="https://www.instagram.com/boop_officiel/" target="_blank">
-                                  <i class="fab fa-instagram"></i>
-                              </a>
-                          </li>
-
-                          <li class="list-inline-item">
-                              <a href="https://www.tiktok.com/@boop_officiel?_t=8s9jTobM5eo&_r=1" target="_blank">
-                                  <i class="fab fa-tiktok"></i>
-                              </a>
-                          </li>
-
-                          <%# <li class="list-inline-item">
-                              <a href="#">
-                                  <i class="fab fa-facebook"></i>
-                              </a>
-                          </li>
-
-                          <li class="list-inline-item">
-                              <a href="#">
-                                  <i class="fab fa-twitter"></i>
-                              </a>
-                          </li> %>
-
-                      </ul>
-                  </div>
-              </div>
-
-
+        <div class="ms-4">
+          <h5 class="text-uppercase">Suivez-nous</h5>
+          <ul class="list-inline footer-links">
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/boop_officiel/" target="_blank" rel="noopener">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.tiktok.com/@boop_officiel?_t=8s9jTobM5eo&_r=1" target="_blank" rel="noopener">
+                <i class="fab fa-tiktok"></i>
+              </a>
+            </li>
+            <%#
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            %>
+          </ul>
         </div>
       </div>
     </div>
   </div>
-
-
-
-  <div class="text-center p-3" style="background-color: #FFE4D6;">
-    © 2024 Boop. Tous droits réservés.
-  </div>
+</div>
+<div class="text-center p-3" style="background-color: #FFE4D6;">
+  © 2024 Boop. Tous droits réservés.
+</div>
 </footer>
