footer ok + landingPage Pro + landingPage Particulier ok

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -26,8 +26,6 @@
 @import "animals_banner";
 @import "animal_show";
 @import "card_payment";
-
-// Import component-specific CSS files here.
 @import "banner";
 @import "description_home";
 @import "commun";
@@ -35,4 +33,5 @@
 @import "setting_button";
 @import "about";
 @import "blog";
-@import "why_boop_pro";
+@import "why_boop";
+
