--- a/app/assets/stylesheets/components/_commun.scss
+++ b/app/assets/stylesheets/components/_commun.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   padding-top: 0; // Remove padding from body
   background-color: white;
@@ -17,8 +21,99 @@ body {
 
 .content-wrap {
   width: 100%;
+
 }
 
 .footer {
   flex-shrink: 0;
+  position: sticky;
+  bottom: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background: #F9F4EE;
+
+  .footer-logo {
+    padding-left: 4rem;
+    text-align: left;
+  }
+
+  .footer-sections {
+    padding-right: 4rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 2rem;
+
+    @media (max-width: 992px) {
+      display: flex;
+      flex-direction: column;
+      margin-left: 4rem;
+      margin-top: 2rem;
+    }
+
+    .footer-section {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      h5 {
+        font-weight: 400;
+        color: #000;
+        text-transform: uppercase;
+        margin-bottom: 1rem;
+      }
+
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        text-align: left;
+        list-style: none;
+        padding-left: 0;
+      }
+
+      .footer-link {
+        color: #333;
+        font-weight: 500;
+        transition: all 0.3s ease;
+        position: relative;
+        text-align: center;
+
+
+        &::after {
+          content: '';
+          position: absolute;
+          width: 0;
+          height: 2px;
+          bottom: 0;
+          left: 50%;
+          background-color: #FF7A3D;
+          transition: all 0.3s ease;
+          transform: translateX(-50%);
+        }
+
+        &:hover {
+          color: #FF7A3D !important;
+
+          &::after {
+            width: 80%;
+          }
+        }
+
+        &.active {
+          color: #FF7A3D !important;
+
+          &::after {
+            width: 80%;
+          }
+        }
+      }
+
+
+    }
+
+
+
+  }
+
 }
