--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload"%>
     <%= javascript_importmap_tags %>
+    <%= favicon_link_tag 'https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//boop_logo.png' %>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-    <%= favicon_link_tag 'https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//boop_logo.png' %>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <%= javascript_include_tag "https://js.stripe.com/v3/" %>
@@ -25,7 +25,7 @@
           <%= yield %>
         </div>
       </div>
-      <footer class="footer">
+      <footer>
         <%= render "shared/footer" %>
       </footer>
     </div>
