--- a/app/assets/stylesheets/components/_pricing.scss
+++ b/app/assets/stylesheets/components/_pricing.scss
@@ -5,7 +5,7 @@
 
 }
 .pricing_design .single-pricing{
-    background: $warning;
+    background: $light-pink;
     padding: 60px 40px;
     border-radius:30px;
     box-shadow: 0 10px 40px -10px rgba(0,64,128,.2);
