--- a/app/assets/stylesheets/components/_form-devise.scss
+++ b/app/assets/stylesheets/components/_form-devise.scss
@@ -1,8 +1,8 @@
 .form-devise {
-  background: rgb(248, 246, 246);
+  background: $light-pink;
   padding: 10px 20px;
   margin-top: 30px;
-  border-radius: 3px;
+  border-radius: 20px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
 
   h2 {
@@ -15,6 +15,7 @@
   .btn {
     width: 100%;
     margin-bottom: 20px;
+    border-radius: 20px;
     color: white;
   }
   .form-control {
