--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -3,7 +3,7 @@
     <div class="hero-section">
       <div class="hero-content">
         <h1 class="hero-title">
-          Les pros animaux à portée de clic        </h1>
+          Le bien-être de votre animal, </br>en un seul endroit        </h1>
         <p class="hero-subtitle">
           Trouvez et prenez rendez-vous en ligne instantanément avec les meilleurs professionnels animaliers.        </p>
         <div class="cta-buttons">
